[package]
name = "srvrls"
version = "0.1.1"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["serverless", "AWS Lambda", "AWS API Gateway"]
description = "A lightweight, opinionated serverless framework reducing boilerplate"
repository = "https://github.com/serverlesstechnology/srvrls"
readme = "README.md"

[dependencies]
aws_lambda_events = "0.2.5"
lambda_runtime = "0.2.1"

serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0"
erased-serde = "0.3"

postgres = {version = "0.15.2", features = ["with-serde_json"]}

uuid = { version = "0.8", features = ["v4"]}
chrono = "0.4.10"